# mathPractise

./: CMakeLists.txt  ExercisesTest.cpp  LargeSum.cpp  LargeSum.hpp  LargeSumTest.cpp  NamesScore.cpp  NamesScore.hpp  NamesScoreTest.cpp  README.md  main.cpp
names_scores_test/: lowerCase.txt  missingDelimer.txt  missingName.txt  mixedCase.txt
